--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     </properties>
 
     <modules>
-        <module>model-layer</module>
+        <module>api-models-layer</module>
         <module>entity-layer</module>
         <module>use-case-layer</module>
         <module>interface-adapter-layer</module>
